# Drako

./: .clang-format  CMakeLists.txt  CMakeSettings.json  Draco.sln
include/drako/audio/: CMakeLists.txt  audio_engine.hpp  audio_input_device.hpp  audio_input_device_win.cpp  audio_output_device.hpp  audio_output_device_win.cpp  audio_stream.hpp  audio_types.hpp  native_audio_api.hpp  wave_format_api.hpp
include/drako/audio/src/: audio_engine_win32.cpp  audio_input_device_win32.cpp  audio_output_device_win32.cpp
include/drako/audio/test/: main_audio_test.cpp
include/drako/cli-editor/: CMakeLists.txt  cli_editor.cpp
include/drako/concurrency/: CMakeLists.txt  async_reader_pool.hpp  concurrent_list.hpp  lock.hpp  lockfree_array_queue.hpp  lockfree_array_stack.hpp  lockfree_dequeue.hpp  lockfree_fixed_queue.hpp  lockfree_linear_allocator.hpp  lockfree_linked_stack.hpp  lockfree_mrmw_queue.hpp  lockfree_mrmwqueue.hpp  lockfree_pool_allocator.hpp  lockfree_priority_queue.hpp  lockfree_ringbuffer.hpp  lockfree_srsw_bound_queue.hpp  lockfree_worksteal_bound_deque.hpp  native_thread.hpp  thread_context.hpp
include/drako/concurrency/test/: CMakeLists.txt  concurrent_bounded_queue.cpp  lockfree_ringbuffer_tests.cpp  mrmw_queue_tests.cpp  reader_pool_test.cpp
include/drako/core/: CMakeLists.txt  byte_stream.hpp  byte_utils.hpp  compiler.hpp  drako_api_defs.hpp  drako_api_win.hpp  encoding.hpp  intrinsics.hpp  platform.hpp  typed_handle.hpp
include/drako/core/builtins/: CMakeLists.txt  byte_utils.hpp  intrinsics.hpp
include/drako/core/container/: bptree.hpp  dk_array_queue.hpp  dk_bplustree.hpp  dk_spatial_grid.hpp  dk_spatial_hgrid.hpp  dk_stack_allocator.hpp  dk_vector.hpp  fixed_vector.hpp  free_list.hpp  hashed_array_tree.hpp  soa.hpp  space_hierarchy_grid.hpp  spatial_grid.hpp  static_vector.hpp  vector_types.hpp
include/drako/core/memory/: memory_core.hpp  sync_memory_pool.hpp  unsync_buddy_allocator.hpp  unsync_fifo_allocator.hpp  unsync_heap_allocator.cpp  unsync_heap_allocator.hpp  unsync_linear_allocator.hpp  unsync_memory_pool.hpp  unsync_pool_allocator.hpp
include/drako/core/meta/: dk_endianness.hpp  dk_reflection.hpp  dk_serialization.hpp  encoding.hpp
include/drako/core/preprocessor/: compiler_macros.hpp  drako_simd.hpp  macro_utility.hpp  platform_macros.hpp  utility_macros.hpp
include/drako/core/system/: CMakeLists.txt  hid_device.hpp  hid_standard.hpp  memory_stream.hpp  native_io_api.hpp  native_io_file.hpp  native_keyboard_device.hpp  native_mouse_device.hpp  system_info.hpp
include/drako/core/test/: intrinsics_test.cpp
include/drako/core/utility/: dk_delegate.hpp  type_decorators.hpp
include/drako/devel/: CMakeLists.txt  assertion.hpp  asset_bundle_manifest.hpp  asset_bundle_types.hpp  asset_cache.hpp  asset_loader.hpp  asset_register.hpp  asset_types.hpp  asset_utils.hpp  build_types.hpp  build_utils.hpp  crc.hpp  editor_system.hpp  logging.hpp  mesh_importers.hpp  project_types.hpp  project_utils.hpp  runtime_asset_manager.hpp  uuid.hpp  uuid_engine.hpp  version.hpp
include/drako/devel/src/: asset_bundle_types.cpp  build_utils.cpp  crc.cpp  editor_system.cpp  mesh_importers.cpp  project_types.cpp  project_utils.cpp  runtime_asset_manager.cpp  uuid.cpp  uuid_defs.hpp  uuid_engine.cpp  uuid_win32.cpp
include/drako/devel/test/: asset_bundle_types_tests.cpp  asset_tests.cpp  build_utils_test1.cpp  crc32_test.cpp  crc32_tests.cpp  project_types_tests.cpp  project_utils_test.cpp  project_utils_tests.cpp  uuid_test1.cpp  version_tests.cpp
include/drako/engine/: CMakeLists.txt  asset_manager.hpp  asset_system.hpp  render_system.hpp  runtime_asset_manager.hpp  scene.hpp
include/drako/engine/src/: asset_manager.cpp  asset_system.cpp  render_system.cpp  runtime_asset_manager.cpp
include/drako/file_formats/: CMakeLists.txt  bmp.hpp  drakoson.hpp  dson.hpp  json.hpp  tga.hpp  wavefront_obj.hpp
include/drako/file_formats/bmp/: bmp.cpp  bmp.hpp  bmp_viewer.cpp  drako_bmp_viewer.cpp
include/drako/file_formats/dson/: CMakeLists.txt  dson.hpp
include/drako/file_formats/ini/: ini.hpp
include/drako/graphics/: CMakeLists.txt  basic_mesh_renderer.hpp  camera.hpp  camera_types.hpp  dk_shader.hpp  lighting.hpp  material.hpp  material_types.hpp  mesh_types.hpp  mesh_utils.hpp  render_system.hpp  shader.hpp  shader_types.hpp  texture_types.hpp  transform.hpp  vk_gui_renderer.hpp  vulkan_forward_renderer.hpp  vulkan_gpu_shader.hpp  vulkan_gui_renderer.hpp  vulkan_material_pipeline.hpp  vulkan_material_types.hpp  vulkan_memory_allocator.hpp  vulkan_mesh_types.hpp  vulkan_queue.hpp  vulkan_render_engine.hpp  vulkan_render_system.hpp  vulkan_resource_loader.hpp  vulkan_runtime_context.hpp  vulkan_shader_types.hpp  vulkan_staging_allocator.hpp  vulkan_staging_engine.hpp  vulkan_swapchain.hpp  vulkan_texture_types.hpp  vulkan_uniform_buffer.hpp  vulkan_utils.hpp  vulkan_vertex_buffer.hpp  vulkan_wireframe_pipeline.hpp
include/drako/input/: CMakeLists.txt  device_system.hpp  device_system_types.hpp  device_types.hpp  gesture_system.hpp  input_device.hpp  input_port.hpp  input_system.hpp  input_system_types.hpp  input_system_utils.hpp  input_types.hpp  input_utils.hpp  mouse_device.hpp  xinput_device_interface_win32.hpp
include/drako/io/: CMakeLists.txt  aio_api_defs.hpp  aio_file_handle.hpp  async_reader_pool.hpp  core.hpp  inout_file_stream.hpp  input_file_handle.hpp  input_file_stream.hpp  input_output_file_handle.hpp  input_output_file_stream.hpp  io_api_defs.hpp  memory_stream.hpp  output_file_handle.hpp  output_file_stream.hpp  reader_service_pool.hpp  vio_api_defs.hpp  vio_file_handle.hpp
include/drako/plugins/: CMakeLists.txt  bmp_format_parser.hpp  json.hpp  tga_format_parser.hpp  wavefront_parser.hpp
include/drako/system/: CMakeLists.txt  desktop_window.hpp  dynamic_library.hpp  file_system_watcher.hpp  hid_standard.hpp  hid_types.hpp  keyboard_device.hpp  mouse_device.hpp  native_io_api.hpp  native_keyboard_device.hpp  native_mouse_device.hpp  native_window.hpp  security_utils.hpp  system_info.hpp  system_memory.hpp  timer.hpp
(+194 files in other folders)
